# GW2-Nexus---Achievement-Tracker

./: CMakeLists.txt  README.md
.github/workflows/: build-achievement-tracker.yml  build.yml
src/: GW2Api.cpp  GW2Api.h  Settings.cpp  Settings.h  Shared.cpp  Shared.h  UI.cpp  UI.h  entry.cpp  resources.rc.in
